gpu/vectordev.h

int FallocMultiVecDevice(void** deviceMultiVec, unsigned count, unsigned int size, unsigned int elementType);
void freeMultiVecDevice(void* deviceVec);
int writeMultiVecDeviceFloat(void* deviceMultiVec, float* hostMultiVec);
int writeMultiVecDeviceDouble(void* deviceMultiVec, double* hostMultiVec);
int writeMultiVecDeviceFloatComplex(void* deviceVec, cuFloatComplex* hostVec);
int writeMultiVecDeviceDoubleComplex(void* deviceVec, cuDoubleComplex* hostVec);
int writeMultiVecDeviceFloatR2(void* deviceMultiVec, float* hostMultiVec, int ld);
int writeMultiVecDeviceDoubleR2(void* deviceMultiVec, double* hostMultiVec, int ld);
int writeMultiVecDeviceFloatComplexR2(void* deviceVec, cuFloatComplex* hostVec, int ld);
int writeMultiVecDeviceDoubleComplexR2(void* deviceVec, cuDoubleComplex* hostVec, int ld);
int readMultiVecDeviceFloat(void* deviceMultiVec, float* hostMultiVec);
int readMultiVecDeviceDouble(void* deviceMultiVec, double* hostMultiVec);
int readMultiVecDeviceFloatComplex(void* deviceVec, float complex* hostVec);
int readMultiVecDeviceDoubleComplex(void* deviceVec, double complex* hostVec);
int readMultiVecDeviceFloatR2(void* deviceMultiVec, float* hostMultiVec, int ld);
int readMultiVecDeviceDoubleR2(void* deviceMultiVec, double* hostMultiVec, int ld);
int readMultiVecDeviceFloatComplexR2(void* deviceMultiVec, float complex* hostMultiVec, int ld);
int readMultiVecDeviceDoubleComplexR2(void* deviceMultiVec, double complex* hostMultiVec, int ld);
int igathMultiVecDeviceFloat(void* deviceVec, int vectorId, int first,
			     int n, void* indexes, void* host_values, int indexBase);
int igathMultiVecDeviceDouble(void* deviceVec, int vectorId, int first,
			      int n, void* indexes, void* host_values, int indexBase);
int igathMultiVecDeviceFloatComplex(void* deviceVec, int vectorId, int first,
				    int n, void* indexes, void* host_values, int indexBase);
int igathMultiVecDeviceDoubleComplex(void* deviceVec, int vectorId, int first,
				     int n, void* indexes, void* host_values, int indexBase);